# mingw_static_test

./: CMakeLists.txt  LICENSE  README.md  a.cpp  externs.h  inst.cpp  static_object.h  test.cpp
